--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mssql": "7.0.0",
     "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.15"
   }
